tests/snapshots/preview__preview_pty__preview_pty_plus@005.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --preview echo {+} -m --preview-window :pty\nafter:\n  @action DeselectAll"
---
"                                        │c                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> c                                     │                                       "
"  b                                     │                                       "
"  a                                     │                                       "
"  3/3                                2/0│                                       "
">                                       │                                       "
cursor: (24, 3)
