tests/snapshots/preview__preview_pty__preview_pty_preserve_quotes@001.snap
---
source: tests/preview.rs
description: "input: items [\"'\\\"ABC\\\"'\"]\noptions: --preview echo X{}X --preview-window :pty"
---
"                                        │X'"ABC"'X                              "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> '"ABC"'                               │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
