tests/snapshots/preview__preview_pty__preview_pty_window_left.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │  b                                     "
"=                                      │> a                                     "
"=                                      │  2/2                                0/0"
"=                                      │>                                       "
cursor: (24, 43)
