tests/snapshots/preview__preview_pty__preview_pty_wrap.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"a bbbbbbb│                                                                      "
"bb       │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │> x                                                                   "
"         │  1/1                                                              0/0"
"         │>                                                                     "
cursor: (24, 13)
