tests/snapshots/preview__preview_pty__preview_pty_wrap@001.snap
---
source: tests/preview.rs
description: "input: items [\"x\"]\noptions: --preview echo a      bbbbbbbbbb --preview-window left:10:pty:wrap"
---
"a bbbbbbb│                                                                      "
"bb       │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │> x                                                                   "
"         │  1/1                                                              0/0"
"         │>                                                                     "
cursor: (24, 13)
